0.68.1
------
1. Fix reading, and saving, of 'dark inverted gradient' setting.
2. Better button metrics - especially for buttons with menus.

0.68.0
------
1. New options:
    Control whether icons are displayed in menus
    Force alternate colours in listviews
    Square selections in listviews
    Dont make 'auto-default' buttons larger - makes them less Gtk2 like though.
2. Fix compilation under KDE 4.2

0.67.6
------
1. Fix corners of round frames where frame background is different to window
   background.
2. Only use icon metrics for auto-deault buttons that are either within a
   QDialogButtonBox, or are on a KFileWidget.
3. Give toolbar items a 1 pixel spacing - so that there is at least a gap between
   konqueror's location and search edit fields.
4. Fix saving of menubar item 'colour on mouse over' setting.
5. Fix bleed of Agua shine in scrollbar buttons.
6. Offset sunken slider thumbs to improve appearance.
7. When shading tab background - dont shade tabs of document mode tab widgets.

0.67.5
------
 1. If drawing square scrollviews, give these a similar 3d effect to rounded ones.
 2. If using squared scrollviews, also square Kate/Kwrite view.
 3. Disable parentless dialog fix for plasma.
 4. Fix button of non-editable combos when not etching entries.
 5. Fix clipping of plastik style mouse over for max/extra round.
 6. Only do mouse over for entries if combos and spin widgets are unified.
 7. If not etching entries, reduce height of editable combo by 2 pixels.
 8. If not etching/shadowing, when mouse over set to 'glow' use 'thick coloured'
 9. If not etching/shadowing, decrease thinner scrollbar groove.
10. Remove hard-coding of light border in progressbars - use gradient setting.
11. Use smaller kwin title bar, if not bordered or round < full.
12. Fix agua buttons when round < full.

0.67.4
------
1. Dont create a KComponentData if KGlobal::hasMainComponent() is true. Fixes
   plasma crash on logout.